--- a/package.json
+++ b/package.json
@@ -1,38 +1,34 @@
 {
-  "name": "rosilva-website",
-  "version": "0.1.0",
-  "private": true,
+  "name": "rosilva-porfolio",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@react-three/fiber": "6.0.10",
+    "awesome-react-icons": "^1.4.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-minimal-side-navigation": "^1.9.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.56.1",
+    "three": "0.127.0",
+    "three-stdlib": "1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
